<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/hiragana_quiz_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/quiz_hiragana"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/katakana_quiz_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/quiz_katakana"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/hiragana_entry_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/quiz_hiragana_entry"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/katakana_entry_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/quiz_katakana_entry"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

</LinearLayout>